# python-hatch-template

./: .gitignore  .gitlint  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  simpl_circle_class.py  tox.ini
.github/: CODEOWNERS
docs/: arithmetic.rst  conf.py  index.rst  links.rst  modules.rst  myst.md  requirements.in  requirements_lock.txt  roles.rst  sections.rst  usage.rst
src/: simpl_circle_class.py
src/arithmetic/: absolute.py  add.py  divide.py  multiply.py  subtract.py
tests/: test_arithmetic.py
