[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# Check: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

name = "arithmetic"
version = "0.0.1"
dependencies = [
]
requires-python = ">=3.10"
authors = [
  { name="Thomas", email="thomas.donner@web.de" },
]
maintainers = [
  { name="Thomas", email="thomas.donner@web.de" }
]
description = "A small example package"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Python", "Packagin"]

# Check: https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-cov"
]
lint = [
  "black",
  "flake8"
]
docs = [
    "sphinx"
]

[tool.hatch.build.targets.wheel]
packages = ["src/arithmetic"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 72

[tool.flake8]
max-line-length = 72

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--cov=src tests"
